tests/paczka2/big_fuzzy/11987635.err
Error in line 2: S905 S905 52,2
Error in line 4: Hz0 S888 80,1
Error in line 7: Hz0 S788 126,9
Error in line 5: S905 S535 74,5
Error in line 14: JWsSncaMF S535 50,7
Error in line 18: S905 S535 88,5
Error in line 26: S905 S905 68,2
Error in line 22: JWsSncaMF S905 60,9
Error in line 11: Hz0 S535 1,5
Error in line 48: JWsSncaMF S428 37,1
Error in line 49: JWsSncaMF S905 80,1
Error in line 45: Wdd4TLV4C S788 55,8
Error in line 52: Wdd4TLV4C S535 43,9
Error in line 47: BFcEy2WPs8 S788 80,1
Error in line 67: JWsSncaMF S428 30,3
Error in line 70: JWsSncaMF S905 23,78
Error in line 69: JWsSncaMF S905 6,1
Error in line 74: Wdd4TLV4C S905 25,4
Error in line 77: MHeTxPV S788 58,8
Error in line 83: Hz0 S905 42,7
Error in line 84: MHeTxPV S905 22,5
Error in line 96: S905 S535 22,3
Error in line 115: 2Rg S428 51,31
Error in line 114: BFcEy2WPs8 S905 0,3
Error in line 125: Wdd4TLV4C S788 71,3
Error in line 134: Wdd4TLV4C S535 9,5
Error in line 118: BFcEy2WPs8 S428 54,8
Error in line 147: BFcEy2WPs8 S535 94,84
Error in line 146: BFcEy2WPs8 S535 24,9
Error in line 160: Wdd4TLV4C S788 82,8
Error in line 157: 2Rg S788 7,8
Error in line 163: Wdd4TLV4C S535 65,3
Error in line 178: Hz0 S788 97,3
Error in line 185: JWsSncaMF S905 38,1
Error in line 189: Wdd4TLV4C S788 22,2
Error in line 192: Hz0 S42C 45,1
Error in line 190: Wdd4TLV4C S428 80,9
Error in line 196: Hz0 S535 0,5
Error in line 186: 2Rg S905 81,5
Error in line 200: S905 S535 69,6
Error in line 205: S905 S905 6,23
Error in line 206: MHeTxPV S905 69,50
Error in line 212: Wdd4TLV4C S428 13,2
Error in line 215: JWsSncaMF S428 1,4
Error in line 208: BFcEy2WPs8 S788 3,4
Error in line 222: S905 S905 317,0
Error in line 227: Hz0 S788 25,9
Error in line 233: Wdd4TLV4C S905 80,1
Error in line 244: BFcEy2WPs8 S788 47,8
Error in line 249: MHeTxPV S905 -4,3
